fix project info right-gap

--- a/style/main.scss
+++ b/style/main.scss
@@ -514,6 +514,7 @@ body {
 
           .project__info {
             padding-right: 0;
+            margin-right: 0;
           }
         }
 
